@@ -8,7 +8,7 @@ TARGET = dvda-author
 
 QMAKE_CFLAGS=-std=c99
 
-DEFINES += _GNU_SOURCE  HAVE_lplex COMPILER_IS_GCC HAVE_curl HAVE_libfixwav HAVE_libogg HAVE_libiberty HAVE_mpeg2enc HAVE_mjpegtools HAVE_OGG_FLAC HAVE_FLAC HAVE_libogg HAVE_sox
+DEFINES += _GNU_SOURCE  HAVE_lplex COMPILER_IS_GCC HAVE_curl HAVE_libfixwav HAVE_libogg HAVE_libiberty HAVE_mpeg2enc HAVE_mjpegtools HAVE_OGG_FLAC HAVE_FLAC HAVE_libogg HAVE_libsox
 
 #libsox.a compiled using: ./configure --disable-symlinks --disable-fast-install --without-libltdl  --without-magic --without-png --without-ladspa --without-mad --without-lame --without-twolame --disable-gomp
 
